--- a/requirements.txt
+++ b/requirements.txt
@@ -9,6 +9,8 @@ annotated-types==0.7.0
 anyio==4.4.0
 apache-libcloud==3.8.0
 APScheduler==3.10.4
+argon2-cffi==23.1.0
+argon2-cffi-bindings==21.2.0
 asttokens==2.4.1
 async-timeout==4.0.3
 asyncpg==0.29.0
@@ -38,6 +40,8 @@ fastapi-storages==0.3.0
 fastapi_cors==0.0.6
 fasteners==0.19
 frozenlist==1.4.1
+geographiclib==2.0
+geopy==2.4.1
 greenlet==3.1.0
 h11==0.14.0
 httpcore==1.0.5
@@ -55,6 +59,7 @@ markdown-it-py==3.0.0
 MarkupSafe==2.1.5
 marshmallow==3.22.0
 mdurl==0.1.2
+minio==7.2.12
 multidict==6.1.0
 orjson==3.10.7
 packaging==24.1
@@ -64,6 +69,7 @@ propcache==0.2.0
 psycopg2-binary==2.9.9
 pyasn1==0.6.1
 pycparser==2.22
+pycryptodome==3.21.0
 pydantic==2.8.2
 pydantic-extra-types==2.9.0
 pydantic-settings==2.5.2
